--- a/urbanthreads/cart/templates/cart/cart.html
+++ b/urbanthreads/cart/templates/cart/cart.html
@@ -10,6 +10,7 @@
                                     <td>PRODUCT</td>
                                     <td>QUANTITY</td>
                                     <td class="text-end">TOTAL</td>
+                                {% if cart_products %}
                                 {% if guest %}
 
                                 {% for cart_product in cart_products %}        
@@ -31,11 +32,16 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            <div class="col-md-4">
-                                                <h6 class="fw-bold m-0"></h6>
-                                                <span><br><span style="color: rgba(0, 0, 0, 0.75);">QTY : {{ cart_product.quantity }}</span><br>
-                                                <input type="number"><a class="mx-5" href="#"><i class="far fa-trash-alt fs-3"></i></a>
-                                            </div>
+                                                <div class="col-md-4 d-flex">
+                                                    <div class="add-sub-box">
+                                                        <button class="btn btn-primary qty_button" data-product_id="{{cart_product.uid}}" type="button" value="-">-</button>
+                                                        <div>
+                                                            <p id="{{cart_product.uid}}">{{ cart_product.quantity }}</p>
+                                                        </div>
+                                                        <button class="btn btn-primary qty_button" data-product_id="{{cart_product.uid}}" type="button" value="+">+</button>
+                                                    </div>                                                    
+                                                    </div><a class="mx-5" href="{% url 'cart:delete_from_cart' cart_product.uid %}"><i class="far fa-trash-alt fs-3"></i></a>
+                                                </div>
                                             <div class="col-md-4">
                                                 <h6 class="text-end fw-bold mt-3">PKR {{total_price}}</h6>
                                             </div>
@@ -56,21 +62,22 @@
                                                     <div class="col-md-6 d-flex justify-content-center"><img class="w-auto" src="{{ cart_product.product.product_images.first.image.url}}" style="height: 198.4px;"></div>
                                                         <div class="col-md-6 py-4">
                                                         <h6 class="fw-bold m-0">{{ cart_product.product.product_name }}</h6>
-                                                        <span><br>
-                                                        <span style="color: rgba(0, 0, 0, 0.75);">PKR {{ cart_product.product.product_price }}</span><br>
-                                                        <span style="color: rgba(0, 0, 0, 0.75);">Color:--- REQUIRED ---</span><br>
-                                                        <span style="color: rgba(0, 0, 0, 0.75);">Size: </span><br>
-                                                        <span style="color: rgba(0, 0, 0, 0.75);">Gender: {{ cart_product.product.product_category }}</span><br>
+                                                        <span class="fs13"><br>
+                                                        PKR {{ cart_product.product.product_price }}<br>
+                                                        Color:--- REQUIRED ---<br>
+                                                        Size: <br>
+                                                        Gender: {{ cart_product.product.product_category }}<br>
                                                         </span>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            
-                                            <div class="col-md-4">
-                                                <h6 class="fw-bold m-0"></h6>
-                                                <span><br><span style="color: rgba(0, 0, 0, 0.75);">QTY : {{ cart_product.quantity }}</span><br>
-                                                <input type="number"><a class="mx-5" href="#"><i class="far fa-trash-alt fs-3"></i></a>
-                                            </div>
+                                                <div class="col-md-4 d-flex">
+                                                    <div class="add-sub-box"><button class="btn btn-primary qty_button" data-product_id="{{cart_product.id}}" type="button" value="-">-</button>
+                                                        <div>
+                                                            <p id="{{cart_product.id}}">{{ cart_product.quantity }}</p>
+                                                        </div><button class="btn btn-primary qty_button" data-product_id="{{cart_product.id}}" type="button" value="+">+</button>
+                                                    </div><a class="mx-5" href="{% url 'cart:delete_from_cart' cart_product.id %}"><i class="far fa-trash-alt fs-3"></i></a>
+                                                </div>
                                             <div class="col-md-4">
                                                 <h6 class="text-end fw-bold mt-3">PKR {{total_price}}</h6>
                                             </div>
@@ -79,6 +86,9 @@
                                 </tr>
                                 {% endfor %}
 
+                                {% endif%}
+                                {% else %}
+                                <p>No item in the cart</p>
                                 {% endif%}
 
                         </table>
@@ -93,4 +103,47 @@
                 <form><button class="btn btn-primary w-100 btn-p" type="button">CHECK OUT&nbsp;</button></form><a class="btn btn-primary white-btn w-100 mt-2 btn-p" role="button">CONTINUE SHOPPING</a>
             </div>
         </div>
+        <script>
+   function updateCartQuantity(quantity, product_id) {
+    var url="{% url 'cart:update_cart' 0 %}".replace('0', product_id); 
+    $.ajax({
+        url: url,
+        method: 'POST',
+        headers: {
+            'X-CSRFToken': '{{ csrf_token }}'
+        },
+        data: {
+            quantity: quantity
+        },
+        success: function(response) {
+            console.log('database updated');
+        },
+        error: function(xhr, status, error) {
+            console.error('Failed to update cart database:', error);
+        }
+    });
+}
+
+const buttons = document.querySelectorAll('.qty_button');
+
+buttons.forEach(button => {
+    button.addEventListener('click', function() {
+        const targetId = button.getAttribute('data-product_id');
+        const quantityDisplay = document.getElementById(targetId);
+        console.log(button.value);
+        const buttonValue = button.value;
+        let quantity = parseInt(quantityDisplay.textContent);
+        if (buttonValue === '+' && quantity < 5) {
+            quantity += 1;
+            updateCartQuantity(quantity, targetId);
+        } else if (buttonValue === '-' && quantity > 1) {
+            quantity -= 1;
+            updateCartQuantity(quantity, targetId);
+        }
+        quantityDisplay.textContent = `${quantity}`;
+        
+    });
+});
+
+        </script>
 {% endblock %}
