LAST COMMIT OF 2023 - 11:40pm 31/12/2023  - nothing special added

--- a/urbanthreads/store/templates/store/product-page.html
+++ b/urbanthreads/store/templates/store/product-page.html
@@ -45,7 +45,7 @@
                                     <div>
                                         <hr>
                                         <p class="size-symbol">SIZE GUIDE</p>
-                                        <form><!--buttons for pc and for mobile-->
+                                        <form>
                                             <div id="customAlert" class="custom-alert alert alert-info">
                                                 <span class="alert-message w-100">
                                                 </span>
