--- a/urbanthreads/cart/templates/cart/cart.html
+++ b/urbanthreads/cart/templates/cart/cart.html
@@ -145,4 +145,27 @@ buttons.forEach(button => {
 });
 
         </script>
+        <script>
+function getCookieValue(cookieName) {
+    var name = cookieName + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var cookieArray = decodedCookie.split(';');
+
+    for(var i = 0; i < cookieArray.length; i++) {
+        var cookie = cookieArray[i];
+        while (cookie.charAt(0) == ' ') {
+            cookie = cookie.substring(1);
+        }
+        if (cookie.indexOf(name) == 0) {
+            return cookie.substring(name.length, cookie.length);
+        }
+    }
+    return "";
+}
+
+var specificCookieValue = getCookieValue('cart').replace(/\\054/g, ',');
+var parsedArray = JSON.parse(specificCookieValue);
+
+
+        </script>
 {% endblock %}
