--- a/urbanthreads/store/templates/store/product-page.html
+++ b/urbanthreads/store/templates/store/product-page.html
@@ -1,100 +1,106 @@
 {% extends 'base.html' %} {% block content %}
-        <section class="clean-block clean-product dark pt-5">                
-            <div class="container pt-5">
-                <div class="block-content">
-                    
-                    <div class="product-info">
-                        <div class="row">
-                            <div class="col-md-6 p-0" style="height: 888px;">
-                                <div class="gallery d-eir-994-323">
-                                    <div id="product-preview" class="vanilla-zoom">
-                                        <div class="zoomed-image px-700"></div>
-                                        <div class="sidebar">
-                                          {% for image in product.product_images.all %}
-                                          <img class="img-fluid d-block small-preview" src="{{ image.image.url }}"onerror="this.src='https://cdn.jsdelivr.net/gh/StaticUser123/statics@main/placeholder.png';"/>
-                                          {% endfor %}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 p-0">
-                                <div class="info">
-                                    <h4 style="font-family: Alatsi, sans-serif;">{{product.product_name}}</h4><span>{{product.product_article}}</span>
-                                    <h6 class="prc-prod">PKR {{product.product_price}}</h6>
-                                    <hr>
-                                    <div class="d-inline-flex w-100">
-                                        <p class="size-symbol w-25"><strong>COLORS</strong><br></p>
-                                        {% for color in product.clothing_color.all %}
-                                        <label class="form-label color-p-circle" for="color-1" style="background-color:{{color}};cursor: pointer;"></label>
-                                        <input type="radio" id="color1" hidden>
-                                        {% empty %}
-                                          No colors.
-                                        {% endfor %}
-                                    </div>
-                                    <div class="d-inline-flex w-100">
-                                        <h6 class="w-25 size-symbol">SIZE</h6>
-                                        {% for size in product.clothing_size.all %}
-                                        <label class="form-label size-symbol mx-1" for="size1">{{size}}</label>
-                                        <input type="radio" id="size-1" hidden>
-                                        {% endfor %}
-                                    </div>
-                                    <div class="d-inline-flex w-100">
-                                        <h6 class="w-25 size-symbol">GENDER</h6>
-                                        <h6 class="size-symbol mx-1">{{product.product_category}}</h6>
-                                    </div>
-                                    <div>
-                                        <hr>
-                                        <p class="size-symbol">SIZE GUIDE</p>
-                                        <form>
-                                            <div id="customAlert" class="custom-alert alert alert-info">
-                                                <span class="alert-message w-100">
-                                                </span>
-                                                <div class="close-alert" onclick="closeCustomAlert()">&times;</div>
-                                            </div>
-                                            <button class="btn btn-primary add-to-cart-btn thisone" style="width: 100%;font-size: .8em;" value="{{product.uid}}" >ADD TO CART</button>
-                                        </form>
-                                    </div>
-                                    <div class="summary">
-                                        <p><br><strong>COMPOSITION &amp; CARE</strong><br>MACHINE WASH UP TO 30C/86F, GENTLE CYCLE<br>DO NOT BLEACH<br>IRON UP TO 110C/230F<br>DO NOT IRON DIRECTLY ON PRINTS/EMBROIDERY/EMBELLISHMENTS/LI&gt;<br>DO NOT DRY CLEAN<br>DO NOT TUMBLE DRY<br><br></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+<section class="clean-block clean-product dark pt-5">   {% csrf_token %}             
+<div class="container pt-5">
+<div class="block-content">
+<div class="product-info">
+<div class="row">
+<div class="col-md-6 p-0" style="height: 888px;">
+<div class="gallery d-eir-994-323">
+<div id="product-preview" class="vanilla-zoom">
+<div class="zoomed-image px-700"></div>
+    <div class="sidebar">
+        {% for image in product.product_images.all %}
+            <img class="img-fluid d-block small-preview" src="{{ image.image.url }}"onerror="this.src='https://cdn.jsdelivr.net/gh/StaticUser123/statics@main/placeholder.png';"/>
+        {% endfor %}
+    </div>
+</div>
+</div>
+</div>
+<div class="col-md-6 p-0">
+        <div class="info">
+            <h4 style="font-family: Alatsi, sans-serif;">{{product.product_name}}</h4>
+            <span>{{product.product_article}}</span>
+            <h6 class="prc-prod">PKR {{product.product_price}}</h6>
+            <hr>
+            <form method="post" id="ajaxform">
+                {% csrf_token %}
+                <div class="d-inline-flex w-100">
+                <p class="size-symbol w-25">
+                    <strong>COLORS</strong><br></p>
+                    <!--######### COLOR #########-->
+                    {% for color in product.clothing_color.all %}
+                    <label class="form-label color-p-circle" for="{{color}}" style="background-color:{{color}};cursor: pointer;"></label>
+                    <input type="radio" id="{{color}}" value="{{color}}" name="color" hidden>
+                    {% empty %}
+                    No colors avaiable.
+                    {% endfor %}
                 </div>
-            </div>
-        </section>
-        <script>
-            $(".thisone").click(function(event){ 
-            console.log("Card link clicked"); 
-            event.preventDefault();  
-            var product_id=$(this).attr("value");
-            var url="{% url 'cart:add_to_cart_ajax' 0 %}".replace('0', product_id); 
-            $.ajax({
-            type: "POST",
-            url: url,
-            data:{ csrfmiddlewaretoken: "{{csrf_token}}"}, 
-            success: function (data){
-            if (data.added){
-                showCustomAlert("added!")        
-            }
-            else{ 
-                Alert("error")}
-            }, 
-            error: function (xhr, textStatus, errorThrown){ 
-            console.log(xhr); 
-            console.log(textStatus); 
-            console.log(errorThrown); 
-            alert("Error")
-            },
-            })});
-            function showCustomAlert(message){
-            var customAlert=document.getElementById("customAlert"); 
-            var alertMessage=customAlert.querySelector(".alert-message"); 
-            alertMessage.textContent=message; 
-            customAlert.style.display="flex"} 
-            function closeCustomAlert(){
-            document.getElementById("customAlert").style.display="none"
-            }
-        </script>
+                <div class="d-inline-flex w-100">
+                    <h6 class="w-25 size-symbol">SIZE</h6>
+                    <!--######### SIZE #########-->
+                    {% for size in product.clothing_size.all %}
+                    <label class="form-label size-symbol mx-1" for="{{size}}">{{size}}</label>
+                    <input type="radio" id="{{size}}" value="{{size}}" name="size" hidden>
+                    {% endfor %}
+                </div>
+                <div class="d-inline-flex w-100">
+                    <h6 class="w-25 size-symbol">GENDER</h6>
+                    <!--######### GENDER #########-->
+                    <h6 class="size-symbol mx-1">{{product.product_category}}</h6>
+                </div>
+            <div>
+            <hr>
+            <p class="size-symbol">SIZE GUIDE</p>
+
+        <div id="customAlert" class="custom-alert alert alert-info"><span class="alert-message w-100"></span><div class="close-alert" onclick="closeCustomAlert()">&times;</div></div>
+        <button class="btn btn-primary add-to-cart-btn thisone" style="width: 100%;font-size: .8em;" >ADD TO CART</button>
+        </div>
+        </form>
+<div class="summary">
+<p><br><strong>COMPOSITION &amp; CARE</strong><br>MACHINE WASH UP TO 30C/86F, GENTLE CYCLE<br>DO NOT BLEACH<br>IRON UP TO 110C/230F<br>DO NOT IRON DIRECTLY ON PRINTS/EMBROIDERY/EMBELLISHMENTS/LI&gt;<br>DO NOT DRY CLEAN<br>DO NOT TUMBLE DRY<br><br></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<script>            
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            xhr.setRequestHeader('X-CSRFToken', "{{csrf_token}}");
+        }
+    });
+    $(document).ready(function() {
+    $('#ajaxform').submit(function(event) {
+    event.preventDefault();
+    var formData = new FormData($(this)[0]);
+    if (formData.get('color')===null){
+        showCustomAlert("Please select a color!");
+    }
+    else if(formData.get('size')===null){
+        showCustomAlert("Please select a size!");
+    }
+    else{
+        formData.append('product_id', '{{product.uid}}');
+        var url="{% url 'cart:add_to_cart_ajax' %}";
+        $.ajax({
+        type: 'POST',
+        url:url,
+        data: formData ,
+        processData: false,
+        contentType: false,
+        success: function(response) {
+            showCustomAlert("added!")
+        },
+        error: function(xhr, status, error) {
+            showCustomAlert("ERROR!",error)
+        }
+        });
+    }
+    
+        });
+        });
+</script>
 {% endblock %}
