--- a/urbanthreads/cart/templates/cart/cart.html
+++ b/urbanthreads/cart/templates/cart/cart.html
@@ -23,7 +23,9 @@
                                                 <div class="row">
                                                     <div class="col-md-6 d-flex justify-content-center"><img class="w-auto" src="{{ item.product.product_images.first.image.url}}" style="height: 198.4px;"></div>
                                                         <div class="col-md-6 py-4">
+                                                        <a href="{% url 'store:product_detail' item.product.uid %}">
                                                         <h6 class="fw-bold m-0">{{ item.product.product_name }}</h6>
+                                                        </a>
                                                         <span><br>
                                                         PKR {{ item.product.product_price }}<br>
                                                         Color: {{ item.color }}<br>
@@ -34,12 +36,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 d-flex">
-                                                    <div class="add-sub-box"><button class="btn btn-primary qty_button" data-product_id="{{item.product.uid}}" type="button" value="-">-</button>
+                                                    <div class="add-sub-box"><button class="btn btn-primary qty_button" data-product_id="{{item.key}}" type="button" value="-">-</button>
                                                         <div>
-                                                            <p id="{{item.product.uid}}"  data-url="{% url 'cart:update_cart' %}">{{ item.quantity }}</p>
-                                                        </div><button class="btn btn-primary qty_button" data-product_id="{{item.product.uid}}" type="button" value="+">+</button>
+                                                            <p id="{{item.key}}"  data-url="{% url 'cart:update_cart' %}">{{ item.quantity }}</p>
+                                                        </div><button class="btn btn-primary qty_button" data-product_id="{{item.key}}" type="button" value="+">+</button>
                                                     </div>
-                                                    <a class="mx-5" href="{% url 'cart:delete_from_cart' item.product.uid %}"><i class="far fa-trash-alt fs-3"></i></a>
+                                                    <a class="mx-5" href="{% url 'cart:delete_from_cart' item.key %}"><i class="far fa-trash-alt fs-3"></i></a>
                                                 </div>
                                             <div class="col-md-4">
                                                 <h6 class="text-end fw-bold mt-3">PKR {{total_price}}</h6>
@@ -110,8 +112,6 @@ buttons.forEach(button => {
     });
 });
 
-        </script>
-        <script>
 function getCookieValue(cookieName) {
     var name = cookieName + "=";
     var decodedCookie = decodeURIComponent(document.cookie);
