--- a/urbanthreads/store/templates/store/product-page.html
+++ b/urbanthreads/store/templates/store/product-page.html
@@ -29,7 +29,7 @@
                     <strong>COLORS</strong><br></p>
                     <!--######### COLOR #########-->
                     {% for color in product.clothing_color.all %}
-                    <label class="form-label color-p-circle" for="{{color}}" style="background-color:{{color}};cursor: pointer;"></label>
+                    <label class="form-label color-p-circle cpointer" for="{{color}}" style="background-color:{{color}};"></label>
                     <input type="radio" id="{{color}}" value="{{color}}" name="color" hidden>
                     {% empty %}
                     No colors avaiable.
@@ -39,7 +39,7 @@
                     <h6 class="w-25 size-symbol">SIZE</h6>
                     <!--######### SIZE #########-->
                     {% for size in product.clothing_size.all %}
-                    <label class="form-label size-symbol mx-1" for="{{size}}">{{size}}</label>
+                    <label class="form-label size-symbol mx-1 cpointer" for="{{size}}">{{size}}</label>
                     <input type="radio" id="{{size}}" value="{{size}}" name="size" hidden>
                     {% endfor %}
                 </div>
